<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/background"
        app:cardCornerRadius="@dimen/spacing_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.WeatherFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_wther"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:paddingBottom="@dimen/spacing_normal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">


            <TextView
                android:id="@+id/degreeCelsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/_18_c" />

            <TextView
                android:id="@+id/cityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/text_content_color"
                android:textSize="@dimen/text_normal"
                app:layout_constraintStart_toStartOf="@+id/degreeCelsius"
                app:layout_constraintTop_toBottomOf="@+id/degreeCelsius"
                tools:text="@string/iraq_maysan" />


            <ImageView
                android:id="@+id/image_Weather"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.598"
                app:layout_constraintStart_toEndOf="@+id/degreeCelsius"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/cloudy" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="98dp"
        android:layout_height="64dp"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:background="@color/background_card"
        android:backgroundTint="@color/background"
        app:cardCornerRadius="@dimen/spacing_normal"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:drawableStart="@drawable/wind"
            android:text="@string/wind"
            android:textColor="@color/text_content_color" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="32dp"
            tools:text="@string/_15_km_h" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="98dp"
        android:layout_height="64dp"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:background="@color/background_card"
        android:backgroundTint="@color/background"
        app:cardCornerRadius="@dimen/spacing_normal"
        app:layout_constraintEnd_toStartOf="@+id/cardView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:drawableStart="@drawable/waterdrops"
            android:text="@string/humidity"
            android:textColor="@color/text_content_color" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            tools:text="@string/_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="98dp"
        android:layout_height="64dp"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:background="@color/background_card"
        android:backgroundTint="@color/background"
        app:cardCornerRadius="@dimen/spacing_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:drawableStart="@drawable/cloud_rain"
            android:text="@string/rain"
            android:textColor="@color/text_content_color" />

        <TextView
            android:id="@+id/rain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            tools:text="@string/_99" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="suggestions Today"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/spacing_smal"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/nice87"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.12" />


</androidx.constraintlayout.widget.ConstraintLayout>