<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_normal"
    android:layout_marginTop="@dimen/spacing_normal"
    android:layout_marginEnd="@dimen/spacing_normal"
    android:backgroundTint="@color/background"
    app:cardCornerRadius="@dimen/spacing_normal"
    tools:context=".ui.WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_wther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:background="@color/background"
        android:paddingBottom="@dimen/spacing_normal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_18_c"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/iraq_maysan"
            android:textColor="@color/text_content_color"
            android:textSize="@dimen/text_normal"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday_12_feb"
            android:textColor="@color/text_hint_color"
            android:textSize="@dimen/text_small"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cloudy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.598"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>